--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Course Library - Discover Course Materials</title>
+    <meta name="description" content="Explore a curated collection of free course materials, notes, and resources from the Federal University of Technology Akure (FUTA).">
+    <meta name="keywords" content="FUTA, course materials, educational resources, free
+    notes, FUTA departments, academic resources, university courses, study materials">
+    <meta name="author" content="Course Library">
+    <meta name="theme-color" content="#4CAF50">
+    <meta property="og:title" content="Course Library - Discover Course Materials">
+    <meta property="og:description" content="Explore a curated collection of free course materials
+    from the Federal University of Technology Akure (FUTA).">
+    <meta property="og:image" content="img/og-image.png">
+    <meta property="og:url" content="course-library.netlify.app">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="FUTA Course Library - Discover Course Materials">
+    <meta name="twitter:description" content="Explore a curated collection of free course materials
+    from the Federal University of Technology Akure (FUTA).">
+    <meta name="twitter:image" content="img/og-image.png">
+    <meta name="robots" content="index, follow">">
     <link rel="stylesheet" href="css/styles.css">
 <link rel="icon" href="img/favicon-48x48.png" sizes="48x48" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
