--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -20,7 +20,7 @@
     <meta name="twitter:description" content="Explore a curated collection of free course materials
     from the Federal University of Technology Akure (FUTA).">
     <meta name="twitter:image" content="img/og-image.png">
-    <meta name="robots" content="index, follow">">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="css/styles.css">
 <link rel="icon" href="img/favicon-48x48.png" sizes="48x48" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
