Add Supabase dynamic loading for course materials

--- a/past-questions.html
+++ b/past-questions.html
@@ -83,6 +83,6 @@
         </div>
     </div>
 
-    <script src="js/scripts.js" type="module"></script>
-</body>
+<script src="js/scripts.js" type="module"></script>
+<script src="js/supabaseMaterials.js" type="module"></script></body>
 </html>
