--- a/all-materials.html
+++ b/all-materials.html
@@ -73,6 +73,8 @@
         <button id="download-popup-close" class="btn btn-primary">Got it!</button>
     </div>
 </div>
-<script src="js/scripts.js"></script>
+<script src="js/scripts.js" type="module"></script>
+<script src="js/supabaseMaterials.js" type="module"></script>
+
 </body>
 </html>
