--- a/index.html
+++ b/index.html
@@ -70,5 +70,6 @@
     </button>
 
 <script src="js/scripts.js" type="module"></script>
+<script src="js/supabaseMaterials.js" type="module"></script>
 </body>
 </html>
