--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <i class="fas fa-arrow-up"></i>
     </button>
 
-<script src="js/scripts.js" type="module"></script>
+<script src="js/scripts.js"></script>
 <script src="js/supabaseMaterials.js" type="module"></script>
 </body>
 </html>
