add updated all file to work with supabase and private bucket, update the site layout and use breve as the contact form, this commint and push is just for testing and see how it works  and also the log is not removed yet. website ID: 1:1:0 testing version@2025.

--- a/about.html
+++ b/about.html
@@ -68,7 +68,6 @@
     <button id="scroll-to-top" class="scroll-to-top" aria-label="Scroll to top">
         <i class="fas fa-arrow-up"></i>
     </button>
-
-    <script src="js/scripts.js"></script>
+        <script type="module" src="js/scripts.js" ></script>
 </body>
 </html>
